<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hint_amount">Amount</string>
    <string name="tip_10">10%</string>
    <string name="tip_15">15%</string>
    <string name="tip_20">20%</string><string name="tip_label">Tip is:</string><string name="tip_display_hint">Tip Amount</string>
    
    

</resources>
