<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_tip_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_10"
            android:onClick="calculateTip" />

        <Button
            android:id="@+id/button_tip_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_15"
            android:onClick="calculateTip" />

        <Button
            android:id="@+id/button_tip_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_20"
            android:onClick="calculateTip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/tip_label" />

        <TextView
            android:id="@+id/tip_display"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/tip_display_hint" />
    </LinearLayout>
</RelativeLayout>